# mcp-firewall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_rule_proposal.md
.github/workflows/: ci.yml  test-publish.yml  welcome.yml
config/: policies.yaml
docs/: AUDIT-REPORT-week3.md  FAQ.md  INTEGRATIONS.md  OBSERVABILITY.md  PERF.md  PERFORMANCE.md  RELEASE-v0.4.0.md  RELEASE-v0.4.1.md  RELEASING.md  RUNBOOK.md  THREATS.md
docs/adr/: 0004-detection-layer-architecture.md  0006-rename-from-mcp-firewall-to-bulwark-mcp.md
src/bulwark_mcp/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  doctor.py  inspector.py  proxy.py  stats.py  storage.py  telemetry.py
src/bulwark_mcp/detectors/: __init__.py  base.py
src/bulwark_mcp/rules/builtin/: role_hijack.yaml
src/mcp_firewall/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  health.py  inspector.py  models.py  proxy.py  stats.py  storage.py
src/mcp_firewall/detectors/: rules.py
tests/: conftest.py  test_cli.py  test_detectors_llm.py  test_detectors_rules.py  test_doctor.py  test_health.py  test_inspector.py  test_lint.py  test_models.py  test_perf.py  test_policy.py  test_proxy.py  test_proxy_block.py  test_recent_pocs.py  test_stats.py  test_storage.py  test_storage_migration.py  test_telemetry.py
tests/integration/: README.md  conftest.py  test_brave_search.py  test_github.py  test_postgres.py
tests/integration/fixtures/brave_search/: attack_in_search_snippet.json  benign_search.json  handshake.json
tests/integration/fixtures/github/: attack_in_issue_body.json  benign_repo_search.json  handshake.json
tests/integration/fixtures/postgres/: attack_in_text_column.json  benign_query_result.json  handshake.json
