[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mcp-firewall"
version = "0.4.0"
description = "Prompt-injection firewall and audit log for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Aleksandr Churilov" }]
maintainers = [{ name = "Aleksandr Churilov", email = "churik0509@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "prompt-injection",
    "security",
    "llm",
    "ai-safety",
    "claude",
    "anthropic",
    "ollama",
    "audit-log",
    "stdio-proxy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.6,<3",
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "aiosqlite>=0.19,<1",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
mcp-firewall = "mcp_firewall.cli:main"

[project.urls]
Homepage = "https://github.com/churik5/mcp-firewall"
Repository = "https://github.com/churik5/mcp-firewall"
Issues = "https://github.com/churik5/mcp-firewall/issues"
Changelog = "https://github.com/churik5/mcp-firewall/blob/main/CHANGELOG.md"
Documentation = "https://github.com/churik5/mcp-firewall/blob/main/README.md"
"Release notes" = "https://github.com/churik5/mcp-firewall/releases"
"Security policy" = "https://github.com/churik5/mcp-firewall/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_firewall"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S", "ASYNC"]
ignore = [
    "S101",
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607", "ASYNC109", "ASYNC230"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = ["error"]
